page d'admin, suppression utilisateur, quelques tests en plus

--- a/t/config.ini
+++ b/t/config.ini
@@ -1,18 +1,11 @@
-# TLD
-# Must contains the first "."
-tld     = ".netlib.re"
-
-# Database Options
-sgbd	= mysql
 dbname	= dnsmanager
 host	= localhost
-
+# other options : see DBI module
+sgbd	= mysql
 # default port for mysql
 port	= 3306
 user	= bla
 passwd	= HardPass4bla
-# other options : see DBI module
-
 # possible options for dnsserver : bind rndc
 dnsapp  = rndc
-zones_path = "/etc/bind/named/"
+zones_path = "/srv/named/"
