exemples (ssh, scp) + tout se fait via ssh (prog externalisable)

--- a/t/config.ini
+++ b/t/config.ini
@@ -9,3 +9,5 @@ passwd	= HardPass4bla
 # possible options for dnsserver : bind rndc
 dnsapp  = rndc
 zones_path = "/srv/named/"
+sshhost = pizza
+sshuser = karchnu
