--- a/www/conf/config.ini
+++ b/www/conf/config.ini
@@ -16,3 +16,6 @@ passwd	= HardPass4bla
 # possible options for dnsserver : bind rndc
 dnsapp  = rndc
 zones_path = "/etc/bind/named/"
+
+sshhost = localhost
+sshuser = karchnu
