Net::OpenSSH + readme + script pour les libs et modules nécessaires

--- a/www/conf/config.ini
+++ b/www/conf/config.ini
@@ -9,13 +9,15 @@ host	= localhost
 
 # default port for mysql
 port	= 3306
-user	= bla
-passwd	= HardPass4bla
+user	= monutilisateur
+passwd	= motdepasse
 # other options : see DBI module
 
 # possible options for dnsserver : bind rndc
 dnsapp  = rndc
-zones_path = "/etc/bind/named/"
+zones_path = "/var/named/rndczones/"
 
-sshhost = localhost
-sshuser = karchnu
+# to access zones on the server
+sshhost = host
+sshuser = dnsmanager
+sshport = 2222
