ajout de nsdc en tant que ns secondaire

--- a/www/conf/config.ini
+++ b/www/conf/config.ini
@@ -13,11 +13,24 @@ user	= monutilisateur
 passwd	= motdepasse
 # other options : see DBI module
 
-# possible options for dnsserver : bind rndc
-dnsapp  = rndc
+# possible options for dnsserver : 
+#   rndc (bind)
+#   knot
+# then secondary nameserver
+dnsapp      = rndc
+dnsappsec   = knot
 zones_path = "/var/named/rndczones/"
 
 # to access zones on the server
 sshhost = host
 sshuser = dnsmanager
 sshport = 2222
+
+# name the IP of the primary named server
+nsmasterv4 = 89.234.141.65
+nsmasterv6 = 2a00:5881:8100:1000::2
+
+# to access to the slave DNS server
+sshhostsec = host
+sshusersec = dnsmanager
+sshportsec = 2222
