ajout de dnsslavekey

--- a/www/conf/config.ini
+++ b/www/conf/config.ini
@@ -21,6 +21,8 @@ dnsapp      = rndc
 dnsappsec   = knot
 zones_path = "/var/named/rndczones/"
 
+dnssalvekey = key-alsace.tetaneutral.net
+
 # to access zones on the server
 sshhost = host
 sshuser = dnsmanager
