par défaut: nsdc

--- a/www/conf/config.ini
+++ b/www/conf/config.ini
@@ -18,7 +18,7 @@ passwd	= motdepasse
 #   knot
 # then secondary nameserver
 dnsapp      = rndc
-dnsappsec   = knot
+dnsappsec   = nsdc
 zones_path = "/var/named/rndczones/"
 
 dnssalvekey = key-alsace.tetaneutral.net
