bind transfert de zone + nsslavev4 v6 + nsd restart

--- a/www/conf/config.ini
+++ b/www/conf/config.ini
@@ -32,6 +32,10 @@ sshport = 2222
 nsmasterv4 = 89.234.141.65
 nsmasterv6 = 2a00:5881:8100:1000::2
 
+# name the IP of the slave named server
+nsslavev4 = 91.224.149.146
+nsslavev6 = 2a01:6600:8081:9200::1
+
 # to access to the slave DNS server
 sshhostsec = host
 sshusersec = dnsmanager
