--- a/www/conf/config.ini
+++ b/www/conf/config.ini
@@ -21,7 +21,7 @@ dnsapp      = rndc
 dnsappsec   = nsdc
 zones_path = "/var/named/rndczones/"
 
-dnssalvekey = key-alsace.tetaneutral.net
+dnsslavekey = key-alsace.tetaneutral.net
 
 # to access zones on the server
 sshhost = host
