configuration clean up

--- a/www/conf/config.ini
+++ b/www/conf/config.ini
@@ -21,7 +21,7 @@ dnsapp      = rndc
 dnsappsec   = nsdc
 zones_path = "/var/named/rndczones/"
 
-dnsslavekey = key-alsace.tetaneutral.net
+dnsslavekey = key-slave.netlib.re
 
 # to access zones on the server
 sshhost = host
@@ -29,12 +29,12 @@ sshuser = dnsmanager
 sshport = 2222
 
 # name the IP of the primary named server
-nsmasterv4 = 89.234.141.65
-nsmasterv6 = 2a00:5881:8100:1000::2
+nsmasterv4 = 192.0.2.1
+nsmasterv6 = 2001:db8::1
 
 # name the IP of the slave named server
-nsslavev4 = 91.224.149.146
-nsslavev6 = 2a01:6600:8081:9200::1
+nsslavev4 = 192.0.2.2
+nsslavev6 = 2001:db8::2
 
 # to access to the slave DNS server
 sshhostsec = host
