--- a/www/conf/config.yml
+++ b/www/conf/config.yml
@@ -17,7 +17,7 @@ database:
 primarydnsserver:
     app: bind9
     dnsslavekey: key-slave.netlib.re
-    zone-path: ssh://dnsmanager@host:2222/var/named/rndczones/
+    zonedir: ssh://dnsmanager@host:2222/var/named/rndczones/
     domain:
         name: my.example.com
         v4: 192.0.2.1       # optional
@@ -25,4 +25,15 @@ primarydnsserver:
 
 secondarydnsserver:
     - app: nsd3
-      cfg: ssh://dnsmanager@host:2222/etc/nsd3/nsd.conf
+      cfg: ssh://dnsmanager@host2:2222/etc/nsd3/nsd.conf
+      domain:
+          name: second.example.com
+          v4: 192.0.2.2       # optional
+          v6: 2001:db8::2     # optional
+
+    - app: nsd3
+      cfg: ssh://dnsmanager@host3:2222/etc/nsd3/nsd.conf
+      domain:
+          name: third.example.com
+          v4: 192.0.2.3       # optional
+          v6: 2001:db8::3     # optional
