--- a/www/environments/production.yml
+++ b/www/environments/production.yml
@@ -9,9 +9,8 @@ logger: "file"
 # don't consider warnings critical
 warnings: 0
 
-# hide errors 
+# hide errors
 show_errors: 0
 
-# cache route resolution for maximum performance
-route_cache: 1
-
+# disable server tokens in production environments
+no_server_tokens: 1
