--- a/www/config.yml
+++ b/www/config.yml
@@ -1,15 +1,15 @@
-# This is the main configuration file of your Dancer app
+# This is the main configuration file of your Dancer2 app
 # env-related settings should go to environments/$env.yml
 # all the settings in this file will be loaded at Dancer's startup.
 
 # Your application's name
-appname: "DNSManager"
+appname: "MyWeb::App"
 
 # The default layout to use for your application (located in
 # views/layouts/main.tt)
 layout: "main"
 
-# when the charset is set to UTF-8 Dancer will handle for you
+# when the charset is set to UTF-8 Dancer2 will handle for you
 # all the magic of encoding and decoding. You should not care
 # about unicode within your app when this setting is set (recommended).
 charset: "UTF-8"
@@ -18,14 +18,14 @@ charset: "UTF-8"
 # simple: default and very basic template engine
 # template_toolkit: TT
 
-# template: "simple"
+#template: "simple"
 
 template: "template_toolkit"
 engines:
-  template_toolkit:
-    encoding:  'utf8'
-    start_tag: '<%'
-    end_tag:   '%>'
+  template:
+    template_toolkit:
+      start_tag: '<%'
+      end_tag:   '%>'
 
 #session: "Storable"
 session: "YAML"
