--- a/www/environments/development.yml
+++ b/www/environments/development.yml
@@ -7,21 +7,17 @@
 logger: "console"
 
 # the log level for this environment
-# core is the lowest, it shows Dancer's core log messages as well as yours
+# core is the lowest, it shows Dancer2's core log messages as well as yours
 # (debug, info, warning and error)
 log: "core"
 
-# should Dancer consider warnings as critical errors?
+# should Dancer2 consider warnings as critical errors?
 warnings: 1
 
-# should Dancer show a stacktrace when an error is caught?
+# should Dancer2 show a stacktrace when an error is caught?
+# if set to yes, public/500.html will be ignored and either
+# views/500.tt, 'error_template' template, or a default error template will be used.
 show_errors: 1
 
-# auto_reload is a development and experimental feature
-# you should enable it by yourself if you want it
-# Module::Refresh is needed 
-# 
-# Be aware it's unstable and may cause a memory leak.
-# DO NOT EVER USE THIS FEATURE IN PRODUCTION 
-# OR TINY KITTENS SHALL DIE WITH LOTS OF SUFFERING
-auto_reload: 0
+# print the banner
+startup_info: 1
