configuration, App, tests cli

--- a/www/conf/config.yml
+++ b/www/conf/config.yml
@@ -12,7 +12,7 @@ database:
     host: localhost
     port: 3306
     user: myuser
-    passwd: my-not-so-dummy-password
+    passwd: "my-not-so-dummy-password"
 
 primarydnsserver:
     app: bind9
