--- a/conf/config.yml
+++ b/conf/config.yml
@@ -16,7 +16,7 @@ database:
 
 primarydnsserver:
     app: bind9
-    dnsslavekey: key-slave.netlib.re
+    dnsslavekey: demokey
     zonedir: ssh://root@localhost:22/var/named/zones/rndczones/
     domain:
         user: root
@@ -27,7 +27,7 @@ primarydnsserver:
         v6: ::1             # optional
 
 secondarydnsserver:
-    - app: nsd3
+    - app: nsd
       cfg: ssh://root@nsdl:22/etc/nsd/nsd.conf
       zonedir: ssh://root@nsdl:22/etc/nsd/
       domain:
@@ -35,7 +35,7 @@ secondarydnsserver:
           v4: 192.168.0.61          # optional
           v6: 2001:db8::2           # optional
 
-#    - app: nsd3
+#    - app: nsd
 #      cfg: ssh://dnsmanager@host3:2222/etc/nsd3/nsd.conf
 #      domain:
 #          name: third.example.com
