readme++, daemon gère mieux IPv(4|6), script de déploiement++

--- a/conf/config.yml
+++ b/conf/config.yml
@@ -7,6 +7,9 @@ tld:
 
 tmpdir: file:///media/fast/
 
+# uncomment it if you want to only test the application views
+#isviewtest: true
+
 database:
     sgbd: mysql # other options : see DBI module
     name: dnsmanager
